gccida/c3/assemble_end_function
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/assemble_end_function/src/varasm.c:1731:43: error: use of undeclared identifier 'off_73AB98'
sprintf( &text, "*.%s%u", ( const char *)&off_73AB98, ( unsigned int)++assemble_end_function_labelno); 
                                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/assemble_end_function/src/varasm.c:1731:72: error: use of undeclared identifier 'assemble_end_function_labelno'
sprintf( &text, "*.%s%u", ( const char *)&off_73AB98, ( unsigned int)++assemble_end_function_labelno); 
                                                                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/assemble_end_function/src/varasm.c:1732:61: error: use of undeclared identifier 'off_73AB98'
fprintf( ( FILE *)asm_out_file, ".%s%u:\n", ( const char *)&off_73AB98, ( unsigned int)assemble_end_function_labelno); 
                                                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/assemble_end_function/src/varasm.c:1732:88: error: use of undeclared identifier 'assemble_end_function_labelno'
fprintf( ( FILE *)asm_out_file, ".%s%u:\n", ( const char *)&off_73AB98, ( unsigned int)assemble_end_function_labelno); 
                                                                                       ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/assemble_end_function/src/obj/varasm.o] Error 1
